--- a/Task page2.html
+++ b/Task page2.html
@@ -19,7 +19,7 @@
                   <div class="card-body">
                       <p class="card-text text-center text-white">D.O.C: 28.04.2013</p> 
                     <p class="card-text text-center  text-white">Status: Complete</p>
-                  <button type="button" style="text-decoration: underline;"><a class="text-dark" style="text-decoration: none;" href="Task page1.html">Back Home</a></button>
+                  <button type="button" style="text-decoration: underline;"><a class="text-dark" style="text-decoration: none;" href="index.html">Back Home</a></button>
                   </div>
                 </div></div>
           <div class="col-sm-6 col-md-8 ps-2">
